[CAO-18250] - Fixed button text overflow in carousel

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -255,6 +255,7 @@
             text-align: center;
             color: $color-blue;
             padding: 10px;
+            white-space: pre-wrap;
             &:active {
                 background: $gray7;
             }
